tg-248 Configuro SW para ignorar /api y /backoffice y /snowstorm

--- a/front-end/webapp/ngsw-config.json
+++ b/front-end/webapp/ngsw-config.json
@@ -25,5 +25,14 @@
         ]
       }
     }
+  ],
+  "navigationUrls": [
+	"/**",
+	"!/**/*.*",
+	"!/**/*__*",
+	"!/**/*__*/**",
+  "!/backoffice/**",
+	"!/snowstorm/**",
+	"!/api/**"
   ]
 }
