--- a/ci/docker/nginx-jar/nginx.conf
+++ b/ci/docker/nginx-jar/nginx.conf
@@ -21,6 +21,20 @@ server {
             proxy_buffers           32 4k;
     }
 
+    location /snowstorm/ {
+            # error_log /var/log/nginx/error.log debug; # testing only; remove for production use
+            proxy_http_version 1.1;
+
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_pass https://snowstorm.msal.gov.ar:443/MAIN/;
+            proxy_redirect default;
+            
+            add_header Access-Control-Allow-Origin *;
+            add_header Access-Control-Allow-Methods "POST, GET, OPTIONS";
+            add_header Access-Control-Allow-Headers "Origin, Authorization, Accept";
+            add_header Access-Control-Allow-Credentials true;
+    }
+
     location /backoffice {
         root /app;
     }
