--- a/dba/liquibase/incrementales-v0_1_3.yml
+++ b/dba/liquibase/incrementales-v0_1_3.yml
@@ -1853,3 +1853,54 @@ databaseChangeLog:
         columnDataType: date
         columnName: administration_date
         tableName: inmunization
+
+
+- changeSet:
+    id: dropTable-evaluation_note_document
+    author: etrapani
+    changes:
+    - dropTable:
+        cascadeConstraints: true
+        tableName: evaluation_note_document
+
+- changeSet:
+    id: evolution_note_document table
+    author: etrapani
+    changes: 
+    - createTable: 
+        tableName: evolution_note_document
+        columns: 
+        - column:
+            constraints:
+                nullable: false
+            name: document_id
+            type: bigint
+        - column:
+            constraints:
+                nullable: false
+            name: internment_episode_id
+            type: int
+    - addPrimaryKey:
+        clustered: true
+        columnNames: document_id, internment_episode_id
+        constraintName: PK_evolution_note_document
+        tableName: evolution_note_document
+        validate: true
+    - addForeignKeyConstraint:
+        baseColumnNames: document_id
+        baseTableName: evolution_note_document
+        constraintName: FK_evolution_note_document_document_id
+        onDelete: NO ACTION
+        onUpdate: NO ACTION
+        referencedColumnNames: id
+        referencedTableName: document
+        validate: true 
+    - addForeignKeyConstraint:
+        baseColumnNames: internment_episode_id
+        baseTableName: evolution_note_document
+        constraintName: FK_evolution_note_document_internment_episode_id
+        onDelete: NO ACTION
+        onUpdate: NO ACTION
+        referencedColumnNames: id
+        referencedTableName: internment_episode
+        validate: true 
