tg-313 Fix warning al agregar roles

--- a/front-end/backoffice/package.json
+++ b/front-end/backoffice/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "test-admin",
+  "name": "backoffice",
   "version": "0.1.0",
   "private": true,
   "homepage": "/backoffice",
@@ -10,9 +10,9 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "prop-types": "^15.7.2",
-    "ra-data-json-server": "^3.3.2",
+    "ra-data-json-server": "^3.5.0",
     "react": "^16.13.1",
-    "react-admin": "^3.3.2",
+    "react-admin": "^3.5.0",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1"
   },
