--- a/front-end/webapp/package.json
+++ b/front-end/webapp/package.json
@@ -27,6 +27,8 @@
 		"@ngrx/store": "^8.6.0",
 		"@ngx-translate/core": "^12.1.2",
 		"@ngx-translate/http-loader": "^4.0.0",
+		"@types/file-saver": "^2.0.1",
+		"angular-file-saver": "^1.1.3",
 		"moment": "^2.24.0",
 		"ng-recaptcha": "^5.0.0",
 		"ngx-moment": "^3.5.0",
