--- a/front-end/backoffice/pom.xml
+++ b/front-end/backoffice/pom.xml
@@ -65,7 +65,7 @@
 							<goal>npm</goal>
 						</goals>
 						<configuration>
-							<arguments>run build:prod</arguments>
+							<arguments>run build</arguments>
 						</configuration>
 					</execution>
 				</executions>
