--- a/back-end/hospital-api/pom.xml
+++ b/back-end/hospital-api/pom.xml
@@ -198,6 +198,12 @@
 			<artifactId>poi-scratchpad</artifactId>
 			<version>3.15</version>
 		</dependency>
+
+		<dependency>
+			<groupId>org.thymeleaf.extras</groupId>
+			<artifactId>thymeleaf-extras-java8time</artifactId>
+			<version>3.0.1.RELEASE</version>
+		</dependency>
 	</dependencies>
 
 	<profiles>
