--- a/front-end/webapp/package.json
+++ b/front-end/webapp/package.json
@@ -32,6 +32,7 @@
 		"moment": "^2.24.0",
 		"ng-recaptcha": "^5.0.0",
 		"ngx-moment": "^3.5.0",
+		"ngx-translate-multi-http-loader": "^3.0.0",
 		"ol": "6.1.1",
 		"rxjs": "~6.5.4",
 		"tslib": "^1.10.0",
