--- a/dba/liquibase/main.yml
+++ b/dba/liquibase/main.yml
@@ -14,3 +14,6 @@ databaseChangeLog:
 - include:
     file: incrementales-v0_1_3.yml
     relativeToChangelogFile: true
+- include:
+    file: incrementales-v0_1_4.yml
+    relativeToChangelogFile: true
