tg-502 [BE] Modificacion de servicio de generacion de documentos PDF para almacenamiento en directorio

--- a/back-end/hospital-api/src/main/resources/application.properties
+++ b/back-end/hospital-api/src/main/resources/application.properties
@@ -108,3 +108,6 @@ app.other.languages=${OTHER_LANGUAGES:en-US}
 google.recaptcha.secret.key=${RECAPTCHA_SECRET_KEY:6LcVh-UUAAAAAIWVvwCNB3zLdNT7BSAnCZ0cZjwz}
 google.recaptcha.validator.url=https://www.google.com/recaptcha/api/siteverify
 google.recaptcha.enable=${RECAPTCHA_ENABLE:true}
+
+# Documentos de internacion
+internment.document.directory = temp
