--- a/dba/liquibase/incrementales-v0_1_4.yml
+++ b/dba/liquibase/incrementales-v0_1_4.yml
@@ -125,3 +125,36 @@
             ALTER TABLE bed ADD CONSTRAINT CH_bed_enabled_available CHECK (not ((enabled = ${boolean.false}) and (available = ${boolean.true})));
             ALTER TABLE bed ADD CONSTRAINT CH_bed_available_free CHECK (not ((available = ${boolean.false}) and (free = ${boolean.true})));
 
+- changeSet:
+    id: document_file-modifyDataType-file_path
+    author: saguero
+    comment: Modify data type column file_path in document_file table
+    changes:
+    - modifyDataType:
+        columnName: file_path
+        newDataType: varchar(100)
+        tableName: document_file
+
+- changeSet:
+    id: document_file-modifyDataType-file_name
+    author: saguero
+    comment: Modify data type column file_name in document_file table
+    changes:
+    - modifyDataType:
+        columnName: file_name
+        newDataType: varchar(40)
+        tableName: document_file        
+
+- changeSet:
+    id: document_file-addColumn-uuid_file
+    author: saguero
+    comment: Add column uuid_file to document_file table
+    changes:
+    - addColumn:
+        columns:
+        - column:
+            constraints:
+                nullable: false
+            name: uuid_file
+            type: varchar(36)
+        tableName: document_file
