tg-414 [BE] Alta administrativa episodio de internacion

--- a/dba/liquibase/incrementales-v0_1_4.yml
+++ b/dba/liquibase/incrementales-v0_1_4.yml
@@ -261,3 +261,15 @@
         referencedColumnNames: id
         referencedTableName: discharge_type
         validate: true              
+
+# TODO: Borrar para  el open-source y modificar patient_discharge-createTable:
+# -> discharge_date: date;
+- changeSet:
+    id: patient_discharge_modify_dateType
+    author: gmurgolo
+    changes:  
+    -  modifyDataType:  
+        columnName:  discharge_date  
+        newDataType:  date
+        tableName: patient_discharge
+   
