tg-578 Endpoint para obtener flavor

--- a/back-end/hospital-api/src/main/resources/application.properties
+++ b/back-end/hospital-api/src/main/resources/application.properties
@@ -111,3 +111,8 @@ google.recaptcha.enable=${RECAPTCHA_ENABLE:true}
 
 # Documentos de internacion
 internment.document.directory = temp
+
+# ===============================
+# Flavor
+# ===============================
+app.flavor = minsal
