--- a/front-end/webapp/package.json
+++ b/front-end/webapp/package.json
@@ -13,10 +13,11 @@
 	"private": true,
 	"dependencies": {
 		"@angular/animations": "~9.0.7",
-		"@angular/cdk": "^9.1.3",
+		"@angular/cdk": "^9.2.4",
 		"@angular/common": "~9.0.7",
 		"@angular/compiler": "~9.0.7",
 		"@angular/core": "~9.0.7",
+		"@angular/flex-layout": "^9.0.0-beta.31",
 		"@angular/forms": "~9.0.7",
 		"@angular/material": "^9.1.3",
 		"@angular/material-moment-adapter": "^9.2.1",
