--- a/back-end/hospital-api/src/main/resources/application-prod.properties
+++ b/back-end/hospital-api/src/main/resources/application-prod.properties
@@ -2,3 +2,9 @@ ws.renaper.tokenExpiration=15
 ws.renaper.url.base=https://federador.msal.gob.ar/masterfile-federacion-service/api
 ws.renaper.url.cobertura=/personas/cobertura
 ws.renaper.url.persona=/personas/renaper
+
+# ===============================
+# Modules
+# ===============================
+ws.renaper.enabled = true
+ws.federar.enabled = true
