tg-661 LocalStorage para cachear el flavor

--- a/back-end/hospital-api/pom.xml
+++ b/back-end/hospital-api/pom.xml
@@ -347,6 +347,7 @@
 					<jsonLibrary>jackson2</jsonLibrary>
 					<noFileComment>true</noFileComment>
 					<sortDeclarations>true</sortDeclarations>
+					<loggingLevel>Info</loggingLevel>
 					<classPatterns>
 						<pattern>net.pladema.*.controller.dto.**</pattern>
 						<pattern>net.pladema.security.authentication.controller.dto.**</pattern>
