tg-728. [BE] Aplicar solución 1

--- a/back-end/hospital-api/src/main/resources/application-dev.properties
+++ b/back-end/hospital-api/src/main/resources/application-dev.properties
@@ -1,3 +1,88 @@
 management.endpoints.web.exposure.include=${ACTUATOR_ENABLED_ENDPOINTS:health,info,env, loggers}
 management.endpoints.jmx.exposure.include=${ACTUATOR_ENABLED_ENDPOINTS:health,info,env, loggers}
 management.endpoint.loggers.enabled=true
+
+app.data.sample.addresses[0].id=1
+app.data.sample.addresses[0].street=Avenida Siempreviva
+app.data.sample.addresses[0].number=742
+app.data.sample.addresses[0].cityId=145
+app.data.sample.addresses[0].postcode=1875
+
+app.data.sample.institutions[0].id=1
+app.data.sample.institutions[0].name=Hospital Local
+app.data.sample.institutions[0].addressId=1
+app.data.sample.institutions[0].phone=2494321098
+app.data.sample.institutions[0].email=hospital_local@mail.com
+app.data.sample.institutions[0].cuit=21123456789
+app.data.sample.institutions[0].sisaCode=BB
+
+
+############### Administrativo
+app.data.sample.people[0].id = 2
+app.data.sample.people[0].firstName = Juan
+app.data.sample.people[0].lastName = Administrativo
+
+app.data.sample.users[0].id=2
+app.data.sample.users[0].username=administrativo@example.com
+app.data.sample.users[0].enable=true
+app.data.sample.users[0].audit.deleted=false
+
+app.data.sample.userPasswords[0].id=2
+app.data.sample.userPasswords[0].password=$2a$10$ZfZzEqmOdqoCYDo89WquI.SbQsK9cteN6E4rGmsF0qMUdbcGBw6O6
+app.data.sample.userPasswords[0].salt=salt
+app.data.sample.userPasswords[0].hashAlgorithm=hashAlgorithm
+
+app.data.sample.userRoles[0].userId=2
+app.data.sample.userRoles[0].roleId=5
+app.data.sample.userRoles[0].institutionId=1
+
+############### Especialista medico
+
+app.data.sample.people[1].id = 3
+app.data.sample.people[1].firstName = Juan
+app.data.sample.people[1].lastName = EspecialistaMedico
+
+app.data.sample.users[1].id=3
+app.data.sample.users[1].username=especialista@example.com
+app.data.sample.users[1].enable=true
+app.data.sample.users[1].audit.deleted=false
+
+app.data.sample.userPasswords[1].id=3
+app.data.sample.userPasswords[1].password=$2a$10$ZfZzEqmOdqoCYDo89WquI.SbQsK9cteN6E4rGmsF0qMUdbcGBw6O6
+app.data.sample.userPasswords[1].salt=salt
+app.data.sample.userPasswords[1].hashAlgorithm=hashAlgorithm
+
+app.data.sample.userRoles[1].userId=3
+app.data.sample.userRoles[1].roleId=3
+app.data.sample.userRoles[1].institutionId=1
+
+app.data.sample.healthcareProfessionals[0].id=3
+app.data.sample.healthcareProfessionals[0].licenseNumber=1234
+app.data.sample.healthcareProfessionals[0].personId=3
+app.data.sample.healthcareProfessionals[0].isMedicalDoctor=true
+
+
+############### Profesional de la salud
+
+app.data.sample.people[2].id = 4
+app.data.sample.people[2].firstName = Juan
+app.data.sample.people[2].lastName = ProfesionaSalud
+
+app.data.sample.users[2].id=4
+app.data.sample.users[2].username=profesionalsalud@example.com
+app.data.sample.users[2].enable=true
+app.data.sample.users[2].audit.deleted=false
+
+app.data.sample.userPasswords[2].id=4
+app.data.sample.userPasswords[2].password=$2a$10$ZfZzEqmOdqoCYDo89WquI.SbQsK9cteN6E4rGmsF0qMUdbcGBw6O6
+app.data.sample.userPasswords[2].salt=salt
+app.data.sample.userPasswords[2].hashAlgorithm=hashAlgorithm
+
+app.data.sample.userRoles[2].userId=4
+app.data.sample.userRoles[2].roleId=4
+app.data.sample.userRoles[2].institutionId=1
+
+app.data.sample.healthcareProfessionals[1].id=4
+app.data.sample.healthcareProfessionals[1].licenseNumber=1234
+app.data.sample.healthcareProfessionals[1].personId=4
+app.data.sample.healthcareProfessionals[1].isMedicalDoctor=false
