--- a/back-end/hospital-api/pom.xml
+++ b/back-end/hospital-api/pom.xml
@@ -348,6 +348,7 @@
 					<noFileComment>true</noFileComment>
 					<sortDeclarations>true</sortDeclarations>
 					<loggingLevel>Info</loggingLevel>
+					<mapEnum>asEnum</mapEnum>
 					<classPatterns>
 						<pattern>net.pladema.*.controller.dto.**</pattern>
 						<pattern>net.pladema.security.authentication.controller.dto.**</pattern>
